# Information-Security-Labs

./: .gitignore
homework_01/: CMakeLists.txt  Makefile  README.md
homework_01/files/: raw_file
homework_01/src/: client.cpp  key.cpp  node.cpp  server.cpp
homework_01/src/client/: Client.cpp  Client.h
homework_01/src/file/: File.cpp  File.h
homework_01/src/key_manager/: KeyManager.cpp  KeyManager.h
homework_01/src/node/key_manager/: KeyManager.cpp  KeyManager.h
homework_01/src/node/node/: Node.cpp  Node.h
homework_01/src/security/: Crypto.cpp  Crypto.h
homework_01/src/server/: Server.cpp  Server.h
homework_01/src/util/: Util.cpp  Util.h
homework_01/test/: test.cpp
homework_03/: tema_03_documentare.docx  tema_03_simulare.docx
